--- a/2022/2022.md
+++ b/2022/2022.md
@@ -1,5 +1,280 @@
 # 2022 Research Daily
 
+## 2022/8/16
+
+//
+
+## 2022/8/15
+
+mul & div program, with usage of pointer:
+
+```c
+#include <stdio.h>
+
+int mul(int, int, int*);
+int div(int, int, int*, int*);
+
+int main()
+{
+	int a = 10, b = 3;
+	int r = 0, rr = 0;
+	mul(a, b, &r);
+	printf("%d * %d = %d\n", a, b, r);
+	r = 0;
+	div(a, b, &r, &rr);
+	printf("%d / %d = %d ... %d\n", a, b, r, rr);
+	return 0;
+}
+```
+
+```assembly
+.text
+.globl mul
+.type mul, @function
+mul:
+	pushq %rbp
+	movq %rsp, %rbp
+	movl %edi, %eax
+	movl %esi, %ebx
+	imul %ebx, %eax
+	movl %eax, (%rdx)
+	movq $0x1, %rax
+	popq %rbp
+	ret
+
+.globl div
+.type div, @function
+div:
+	pushq %rbp
+	movq %rsp, %rbp
+	xor %rax, %rax				; return value on error
+	or %esi, %esi					; ensure %esi is not 0
+	jz invalid						; if %esi is 0, end
+	movl %edi, %eax
+	movq %rdx, %r10
+	cdq										; edx:eax
+	idiv %esi
+	movl %eax, (%r10)
+	movl %edx, (%rcx)
+	movq $0x1, %rax				; set return value 1
+invalid:
+	popq %rbp
+	ret
+```
+
+## 2022/8/14
+
+How to pass parameters:
+
+* x86-32: `%eax`, `%edx` and `%ecx`, the rest go on stack
+* x86-64: `%rdi`, `%rsi`, `%rdx`, `%rcx`, `%r8`, `%r9` (even for the functions with varargs), the rest go on the stack
+
+(In Microsoft Visual C++, calling convention for x86-64 programs on Windows requires a calling function to pass the first four integer (or pointer) arguments using registers RCX, RDX, R8, and R9)
+
+write a C + ASM program:
+
+```c
+#include <stdio.h>
+
+int sum_(int, int);
+
+__attribute__((regparm(0))) int main()
+{
+        int a = 9, b = 8;
+        printf("%d\n", sum_(a, b));
+        return 0;
+}
+```
+
+```assembly
+.text
+.globl sum_
+.type sum_, @function
+sum_:
+        pushq %rbp
+        movq %rsp, %rbp
+        movl 0x18(%rbp), %eax
+        movl 0x1c(%rbp), %ecx
+        addl %ecx, %eax
+        popq %rbp
+        ret
+```
+
+(Using the parameters in stack)
+
+OR
+
+```assembly
+.text
+.globl sum_
+.type sum_, @function
+sum_:
+        pushq %rbp				; optional
+        movq %rsp, %rbp		; optional
+        movl %edi, %eax
+        movl %esi, %ecx
+        addl %ecx, %eax
+        popq %rbp					; optional
+        ret
+```
+
+(Using the parameters in registers)
+
+All the assembly code is writed in AT&T style.
+
+The differences of AT&T style and Intel style:
+
+* //
+
+## 2022/8/12
+
+Instruction set:
+
+//
+
+## 2022/8/10
+
+The differences between x86-64 and x86-32:
+
+//
+
+## 2022/8/9
+
+* General-Purpose Registers:
+
+![2022080901](./pic/2022080901.png)
+
+* R8B~R15B is also called R8L~R15L (in Intel documents)
+
+* the x86 instruction set imposes some notable restrictions on how general-purpose registers can be used:
+
+  * imul: save the calculated integer product to RDX:RAX, EDX:EAX, DX:AX, or AX
+  * idiv: requires the integer dividend to be loaded in RDX:RAX, EDX:EAX, DX:AX, or AX
+
+  (the colon notation signifies that the final product is contained in two registers, with the first register holding the high-order bits)
+
+  * x86 string instructions require that the addresses of the source and destination operands be placed in registers RSI and RDI, respectively. String instructions that include a repeat prefix must use RCX as the count register, while variable-bit shift and rotate instructions must load the count value into register CL.
+  * processor uses register RSP to support stack-related operations such as function calls and returns, programs can also use the stack to pass function arguments and store temporary data. The RSP register always points to the stack's top most item.
+  * register RBP is typically used as a base pointer to access data items that are stored on the stack.
+
+* RFLAGS:
+
+| Bit Position | Name                      | Symbol | Use     |
+| ------------ | ------------------------- | ------ | ------- |
+| 0            | Carry Flag                | CF     | Status  |
+| 1            | Reserved                  |        | 1       |
+| 2            | Parity Flag               | PF     | Status  |
+| 3            | Reserved                  |        | 0       |
+| 4            | Auxiliary Carry Flag      | AF     | Status  |
+| 5            | Reserved                  |        | 0       |
+| 6            | Zero Flag                 | ZF     | Status  |
+| 7            | Sign Flag                 | SF     | Status  |
+| 8            | Trap Flag                 | TF     | System  |
+| 9            | Interrupt Enable Flag     | IF     | System  |
+| 10           | Direction Flag            | DF     | Control |
+| 11           | Overflow Flag             | OF     | Status  |
+| 12           | I/O Privilege Level Bit 0 | IOPL   | System  |
+| 13           | I/O Privilege Level Bit 1 | IOPL   | System  |
+| 14           | Nested Task               | NT     | System  |
+| 15           | Reserved                  |        | 0       |
+| 16           | Resume Flag               | RF     | System  |
+| 17           | Virtual 8086 Mode         | VM     | System  |
+| 18           | Alignment Check           | AC     | System  |
+| 19           | Virtual Interrupt Flag    | VIF    | System  |
+| 20           | Virtual Interrupt Pending | VIP    | System  |
+| 21           | ID Flag                   | ID     | System  |
+| 22-63        | Reserved                  |        | 0       |
+
+CF: is set by the processor to signify an overflow condition when performing unsigned integer arithmetic; also used by some register rotate and shift instructions.
+
+OF: signals that the result of a signed integer operation is too small or too large.
+
+PF:  processor sets the parity flag to indicate whether the least-significant byte of an arithmetic, compare, or logical operation contains an even number of 1 bits (parity bits are used by some communication protocols to detect transmission errors).
+
+SF & ZF: are set by arithmetic and logical instructions to signify a negative, zero, or positive result.
+
+DF: Control bit. Program can set or reset the direction flag, which defines the auto increment direction (0 = low to high addresses, 1 = high to low addresses) of the RDI and RSI registers during execution of string instructions.
+
+Other bits in the RFLAGS: **should never be modified by an application program**
+
+(Reserved bits also should never be modified, and no assumptions should ever be made regarding the state of any reserved bit)
+
+* RIP: contains the logical address of the next instruction to be executed. The RIP register is also used for displacement-based operand memory addressing.
+
+* Instruction Operands: Immediate, Register, Memory
+
+* Memory Addressing:
+
+  * calculate an effective address:
+
+  ```
+  EffectiveAddress = BaseReg + IndexReg * ScaleFactor + Disp
+  ```
+
+  * BaseReg can be any general-purpose register.
+  * IndexReg can be any general-purpose register except RSP.
+  * Valid ScaleFactor include 2, 4, and 8.
+  * Disp is a constant 8-bit, 16-bit, or 32-bit signed offset that's encoded within the instruction.
+  * The final size of an effective address calculation is always 64 bits.
+
+  | Addressing Form                | Example                |
+  | ------------------------------ | ---------------------- |
+  | RIP + Disp                     | mov rax,[Val]          |
+  | BaseReg                        | mov rax,[rbx]          |
+  | BaseReg + Disp                 | mov rax,[rbx+16]       |
+  | IndexReg * SF + Disp           | mov rax,[r15*8+48]     |
+  | BaseReg + IndexReg             | mov rax,[rbx+r15]      |
+  | BaseReg + IndexReg + Disp      | mov rax,[rbx+r15+32]   |
+  | BaseReg + IndexReg * SF        | mov rax,[rbx+r15*8]    |
+  | BaseReg + IndexReg * SF + Disp | mov rax,[rbx+r15*8+64] |
+
+  * RIP-relative addressing allows the processor to reference global or static operands using a 32-bit displacement instead of a 64-bit displacement, which reduces required code space. It also facilitates position-independent code. One constraint of RIP-relative addressing is that the target operand must reside with a ± 2 GB address window of the value that’s contained in register RIP.
+
+  (The calculation of a RIP-relative displacement value is automatically determined by the assembler during code generation)
+
+## 2022/8/8
+
+* x86 fundamental data type:
+
+| Data Type       | Bits | Usages                                                     |
+| --------------- | ---- | ---------------------------------------------------------- |
+| Byte            | 8    | Character, integers, Binary Coded Decimal (BCD) values     |
+| Word            | 16   | Character, integers                                        |
+| Doubleword      | 32   | Integers, single-precision floating-point                  |
+| Quadword        | 64   | Integers, double-precision floating-point, packed integers |
+| Quintword       | 80   | Double extended-precision floating-point, packed BCD       |
+| Double Quadword | 128  | Packed integers, packed floating-point                     |
+| Quad Quadword   | 256  | Packed integers, packed floating-point                     |
+
+* Memory-aligned: the data type whose address is evenly divisible by its size in bytes.
+* All multi-byte fundamental data types should be properly aligned whenever possible in order to avoid potential performance penalties that can occur when the processor accesses misaligned data.
+* C/C++ type:
+
+| type                        | <stdint.h> / <cstdint> | bits |
+| --------------------------- | ---------------------- | ---- |
+| char                        | int8_t                 | 8    |
+| short                       | int16_t                | 16   |
+| int, long                   | int32_t                | 32   |
+| long long                   | int64_t                | 64   |
+| unsigned char               | uint8_t                | 8    |
+| unsigned short              | uint16_t               | 16   |
+| unsigned int, unsigned long | uint32_t               | 32   |
+| unsigned long long          | uint64_t               | 64   |
+| float                       | N/A                    | 32   |
+| double                      | N/A                    | 64   |
+
+* SIMD data type:
+
+| type    | bits |
+| ------- | ---- |
+| xmmword | 128  |
+| ymmword | 256  |
+| zmmword | 512  |
+
+* x86-64 processor internal architecture:
+
+![2022080801](./pic/2022080801.png)
+
 ## 2022/8/4
 
 Seminar:
@@ -34,11 +309,7 @@ Blocking does not improve the performance of matrix multiply on the Core i7, bec
 
 in CSAPP:
 
-```
-この文だけを取り出すと後町君のようなコメントが返ってきてしまうかもしれないけど，この文は，教科書の説明の文脈の中で理解する必要があります．この章はblockingのいくつかの実験結果と分析を示しているだけで，ベストの性能を出すことを目標にはしていません．
-```
-
-So, this conclusion is only the results and analysis obtained from the data in this chapter, and is not intended to write high-performance programs like OpenBLAS.
+This conclusion is only the results and analysis obtained from the data in this chapter, and is not intended to write high-performance programs like OpenBLAS.
 
 * The performance of Raspi's GPU is not very good, so I should give up the research on it.
 * Raspi's CPU is another research theme. (other CPU is also a good theme, so Raspi is not the only choice)
@@ -230,59 +501,11 @@ TODO:
 I get some useful idea for my persentation from Mr. Gocho, record here:
 
 ```
-コメントです。
-行列積の図説(p.16等)は、
-全て参考文献[3]の図をコピー＆ペーストしたものですね。
-基本的に、自分の作業・検討内容を説明する際、
-他人の著作物をコピー＆ペーストして使用することは厳禁です。
-図説は技術者の必須スキルでもあるので、必ず自分で作図するようにしましょう。
-なお、HPC上級者でも、OpenBLASより高性能なGEMMを作ることは困難です。
-同様に、ラズパイ4のQPU(GPU)利用も難易度は非常に高いです。
-また、CPUの方が高性能なので、GPUを使ってもあまり良い結果は期待できません。
-組込環境向けに並列処理の研究をするのであれば、ラズパイよりむしろ、
-スマートフォン(Android OS  or macOS)を題材にした方が面白いですね。
+//
 ```
 
 ```
-スマートフォンのプロセッサは、
-例えば、Qualcomm Snapdragonが有名ですね。
-https://en.wikipedia.org/wiki/List_of_Qualcomm_Snapdragon_processors#Snapdragon_8/8+_Gen_1_(2022)
-問題は「それで何するの？」ということです。
-( 組込システムを選択するならば、組込に適したお題・組込を選ぶ根拠が必要 )
-・アプリケーション/APIを高速化する場合。
-→ 具体的に何を高速化するのか？
-　-行列演算/線形代数：競合技術だらけ。
-　-画像処理：DeepLearning(CNN)がホット。競合技術だらけ。
-　-グラフ処理：
-　　　+ graph convolutional network (GCN) inference
-　　　　だいぶ新しい技術。上田研っぽい。
-　　　+ ゲノム解析(de bruijn graph)　
-　　　　重たい処理として有名。※組込の理由がない。
-　　　+ オセロ/将棋/囲碁(スマフォパズルゲームの高速処理)。
-　　　　アルゴリズムが機械学習化しているので、
-　　　　簡単な組合せ探索アルゴリズムを高速化してもあまり価値がない
-　-他
-・並列化/チューニングを容易化するフレームワークを作る場合。
-→ 具体的に何を作りたいのか？
-　-並列化を意識せず (プログラミング言語なし等)、並列アプリを生成するツール。
-　　　+ 画像処理では、OpenCV G-APIが開発途上。
-　　　　( https://docs.openvino.ai/latest/openvino_docs_gapi_gapi_intro.html )
-　　　+ 機械学習では、TensorFlow (処理手順と内容を有向グラフで設計)が有名。
-　　　+ Petri NetグラフのGUI設計ツール→組込コード自動生成ツール
-　　　　(https://www.mdpi.com/2076-3417/10/21/7662)
-　　　+ ビジュアルプログラミングツール
-　-グラフ探索処理全般で使える並列コンピューティングフレームワーク
-　-CG処理向け並列レイトレーシングフレームワーク
-　-組込SoC上のヘテロジニアス計算リソース(CPU/GPU/DSP等)を同時活用する際に
-　　負荷分散・タスク分割を自動化する並列プログラミングフレームワーク
-　-スマートフォン多数を無線通信で連携させる機能(マルチホップ通信等)ライブラリ
-　-他
-・ラジコン等の移動物体に組込コンピュータを搭載する場合。
-→ 何を使って、何のために、何を実現したいのか？
-　-ミニカー/ドローン/水中ドローン + カメラ + 並列処理
-　　https://github.com/NVIDIA-AI-IOT/jetracer
-　-自律分散制御(マルチエージェント)
-　-他
+//
 ```
 
 I will think about these carefully.
@@ -369,148 +592,7 @@ The PDF material of the persentation: [20220719pdf](./data/20220719.pdf)
 
 For preparing my persentation, I asked Mr. Gocho some questions and get lots of awesome answers, record here:
 
-* -Z>
-
-```
-Tilingが行列掛け算を加速できる原因を調べていますが、教科書でこう書いています：
-Blocking does not improve the performance of matrix multiply on the Core i7, because of its sophisticated prefetching hardware.
-今使っているCPUがCore i7よりもっと高級はずです、でもTilingは確かに行列掛け算を加速できます。どうして教科書はTilingが行列掛け算の性能を改善できないって書きますか、ちょっと気になります。
-```
-
--G>
-
-```
-どんなプロセッサでも、(Core i7、ハイエンドCPU、GPU等でも)
-GEMMを高速化するために、Tiling(blocking)は有効なテクニックです。( 行列が小さすぎる場合は除く)
-「より速いGEMMプログラムを書く」ことは、並列コンピューティング分野の基本的なトレーニングですが、
-超高速な性能を実現するには、高い専門スキルが求められます。
-教科書の著者は、スキルがなく、遅いGEMMしか実装できず,
-それで、性能分析に関して、誤った説明をしているのでしょう。
-要するに、教科書が間違っています。
-Blocking is always effective techniques to accelerate GEMM processing
-on any processors such as Core i7, more high-end CPU, and GPU, unless the matrices are too small.
-The "writing faster GEMM program" is fundamental training in parallel computing area.
-High professional skills of this area are required to achieve the ultra faster performance.
-I think that authors of your textbook can only implement slow GEMM programs, because of their poor skills.
-So, they incorrectly described the performance analysis.
-In summary, your textbook is incorrect.
-GEMM: general matrix multiplication
-```
-
-* -Z>
-
-```
-lda, ldb, ldc は大きなメモリの一部を行列として使う際には意味があるってわかっていますが、全部のメモリを行列として使う時は lda, ldb, ldc が性能方面の意味がありますか。
-I know when I only want to work with smaller tiles inside a larger matrix, the leading dimensions parameters can give a lot of flexibility. But if I want to work with the whole larger matrix, do the leading dimensions parameters have any other significance on performance improvement?
-```
-
--G>
-
-```
-各行列にleading dimension sizeを設定する目的は例えば以下の通りです。
-・各行先頭のアドレスのalignmentを調整する。
-・2冪サイズ使用時によく発生するキャッシュライン衝突を回避する。
-For example, the purpose of setting the "leading dimension size" is as follows:
--Adjust the address alignment of each row; and
--Avoid cache line conflicts that are often occurred when the size is a power of 2.
-```
-
--Z>
-
-```
-Adjusting the address alignment of each row means, for example, if I want to do a 1000*1000 matrix multiplication, I can adjust the row to 1024 so that the size of row can be aligned with the memory, is that right?
-```
-
--G>
-
-```
-lds=10 (x 4byte = 40bit)
-row0: 00 = 00000000 (32byte-aligned)
-row1: 40 = 00101000 (  4byte-aligned)
-row2: 80 = 01010000 (  8byte-aligned)
-row3:120= 01111000 (  4byte-aligned)
-lds=16 (x 4byte = 64bit)
-row0:  00 = 00000000 (32byte-aligned)
-row1:  64 = 01000000 (32byte-aligned)
-row2:128 = 10000000 (64byte-aligned)
-row3:192 = 11000000 (32byte-aligned)
-AVX load/store operations for unaligned addresses have performance penalty.
-| is that right?
-Yes. But, the 1024 is "power of 2", which will cause cache-line conflicts.
-```
-
-```
-* Example.
-Cache size : 8KiB (8 * 1024 bytes)
-Cache line : 64byte
-Cache architecture: 8-way set associative with X tags, where X = (8*1024 [KiB]) / 64byte = 128.
-　tag000: way0 way1 way2 way3 way4 way5 way6 way7 (= total 64byte x 8way )
-　tag001: way0 way1 way2 way3 way4 way5 way6 way7 (= total 64byte x 8way )
-　tag002: way0 way1 way2 way3 way4 way5 way6 way7 (= total 64byte x 8way )
-　...
-　tag127: way0 way1 way2 way3 way4 way5 way6 way7 (= total 64byte x 8way )
-The tag is determined by
-　tag( addr ) = (addr/64) % 128,
-where 64 is the size of cache line, 128 is the number of tags, and "addr" is the accessing address.
-* case: lds=4096
---> leading dimension、Cached-tile ■
-■ ■ ■ ■
-■ ■ ■ ■ | iteration
-■ ■ ■ ■ v
-■ ■ ■ ■
-cached data, and tag
-- row00　addr 000000　tag 0
-- row01　addr 004096　tag 64
-- row02　addr 008192　tag 0
-- row03　addr 012288　tag 64
-- row04　addr 016384　tag 0
-- row05　addr 020480　tag 64
-- row06　addr 024576　tag 0
-- row07　addr 028672　tag 64
-In this case, two tags (tag0,64) are only used.
-Therefore, the limit of cached size is 1024bytes (2tags x 8way x 64byte line), which is only 1/8 the size of the entire cache memory.
-When new data is cached into the tag, in which all "way"s are already used, the LRU(Last Recently Used) cache-line way will be removed from the tag.
-This is called as "cache conflict" or "cache collision".
-If you use the cache architecture, in which each tag can manage only 2 ways,
-　 accessing row00 is "cache-miss" after accessing row01, and row02.
-　 accessing row01 is "cache-miss" after accessing row02, and row04.
-　 accessing row02 is "cache-miss" after accessing row04, and row01.
-In this situation (called as "cache pollution), the blocking techniques provides no effects or huge performance penalty.
-* case: lds=4096+32 = 4128 (32byte aligned and conflict-free size)
-cached data, and tag
-- row00　addr 000000　tag 0
-- row01　addr 004128　tag 64
-- row02　addr 008256　tag 1
-- row03　addr 012384　tag 65
-- row04　addr 016512　tag 2
-- row05　addr 020640　tag 66
-- row06　addr 024768　tag 3
-- row07　addr 028896　tag 67
-...
-In this case, all tags (tag0,1,2,3,..., 64,65,66,67,... ) are used.
-Therefore, the limit of cached size is 8192 bytes, which is the entire cache memory.
-```
-
-* -Z>
-
-```
-I had reviewed the calculation of the theoretical peak performance of ‘parmigiano’, and I found we used cores 16 when did this calculation. But according to this (https://www.amd.com/en/products/cpu/amd-ryzen-threadripper-2990wx) webpage, there are 32 cores in this CPU. So, should we use 32 instead of 16 for calculation?
-I remember the avx instructions run at a lower frequency than the base frequency. So, does this mean that the program using the avx instructions cannot achieve the throughput calculated with the base frequency?
-Thank you very much! Looking forward to your message.
-```
-
--G>
-
-```
-You can use the 16 cores to calculate the theoretical peak performance
-for 16-threaded code.
-| avx instructions cannot achieve the throughput calculated with the base frequency
-Yes, correct.
-When using SIMD instructions, the CPU downclocks from the base clock.
-Therefore, it is not possible to achieve 100% of the theoretical peak performance.
-If the actual  performance is 80% to 95% of the theoretical performance,
-your tuning is perfect.
-```
+//
 
 ## 2022/7/16
 
@@ -1472,14 +1554,7 @@ int main(int argc, char const *argv[])
 And I find the AVX program is slower than the normal version. Mr. Gocho explain it for me:
 
 ```
-down clock when avx instruction issued.
-example:
-* base 3.0GHz (non avx instruction)
-* avx 2.8GHz?
-avx instrunction accererates computation.
-if computation is bottlneck, application will be faster.
-メモリアクセス時間がボトルネックの時は、演算を速くしても、処理時間は短くならない。avxはdownclockする代わりに演算を速くするもの
-つまり、演算がボトルネックじゃない時に、avxを使うと、downclockした分だけ、遅くなってしまう
+//
 ```
 
 So, when I run the program with a larger size (make computation to bottlneck), I will see the AVX program is faster than the normal version.
@@ -1493,77 +1568,7 @@ And another advice from Mr. Gocho: Make memory aligned when using AVX instructio
 The example code from Mr. Gocho:
 
 ```c
-#pragma GCC target ("avx,avx2,fma") // compile with option "-mavx -mavx2 -mfma"
-#pragma GCC optimize ("unroll-loops") // compile with option "-funroll-loops"
-#include <x86intrin.h>
-#include <immintrin.h>
-#include <assert.h>
-
-#define BLK_M 64
-#define BLK_N 64
-#define BLK_K 64
-#define USE_AVX
-
-static __attribute__((always_inline))
-void BLK_gemm( const float *__restrict__ A, size_t lda,
-		       const float *__restrict__ B, size_t ldb,
-		       float       *__restrict__ C, size_t ldc ) 
-{
-	for (int m = 0; m < BLK_M; m++, C += ldc, A += lda) {
-		for (int k = 0; k < BLK_K; k++) {
-			const float *Bk = B + k*ldb, amk = A[k];
-#pragma GCC ivdep
-			for (int n = 0; n < BLK_N; n++) C[n] += amk * Bk[n];		
-		}
-	}
-}
-
-static __attribute__((always_inline))
-void BLK_gemm_avx2( const float *__restrict__ A, size_t lda,
-		            const float *__restrict__ B, size_t ldb,
-		            float       *__restrict__ C, size_t ldc ) 
-{	
-	for (int m = 0; m < BLK_M; m++, C += ldc, A += lda) {
-		for (int k = 0; k < BLK_K; k++) { // ここをunrollした方が速くなる
-			const float *Bk = B + k*ldb;
-			__m256 amk = _mm256_set1_ps( A[k] );
-			for (int n = 0; n < BLK_N; n += 8) {
-				__m256 cmn = _mm256_loadu_ps( C+n  );
-				__m256 bkn = _mm256_loadu_ps( Bk+n );
-				cmn = _mm256_fmadd_ps( amk, bkn, cmn );
-				_mm256_storeu_ps( C+n, cmn );		
-			}
-		}
-	}
-}
-
-void tiled_gemm( const float *__restrict__ A, size_t lda,
-		         const float *__restrict__ B, size_t ldb,
-		         float       *__restrict__ C, size_t ldc, 
-				 int M, int N, int K ) 
-{
-	assert( N%BLK_N == 0 && lda >= K );
-	assert( M%BLK_M == 0 && ldb >= N );
-	assert( K%BLK_K == 0 && ldc >= N );
-	size_t fillsize = sizeof( float )*BLK_N;
-#pragma omp parallel for
-	for (int mb = 0; mb < M; mb += BLK_M) {
-		for (int nb = 0; nb < N; nb += BLK_N) {	
-			for (int m = 0; m < BLK_M; m++) memset( C+mb*ldc+nb, 0, fillsize );
-			for (int kb = 0; kb < K; kb += BLK_K) { 
-#ifdef USE_AVX	
-				BLK_gemm_avx( A+mb*lda+kb, lda,
-						      B+kb*ldb+nb, ldb,
-						      C+mb*ldc+nb, ldc );
-#else
-				BLK_gemm( A+mb*lda+kb, lda,
-						  B+kb*ldb+nb, ldb,
-						  C+mb*ldc+nb, ldc );
-#endif
-			}
-		}
-	}
-}
+//
 ```
 
 ## 2022/6/28
@@ -2188,7 +2193,7 @@ Mr. Gocho write a program that the performance of non-nested array is right (fas
 
 This is the program from Mr. Gocho:
 
-[File: simpleGEMM.tar.gz](./file/simpleGEMM.tar.gz)
+//
 
 I find Mr. Gocho use `restrict` to mark the parameter of matrix multiplication function in his program.
 
@@ -2279,55 +2284,7 @@ These days I was prepareing for my presentation.
 
 And about the nested-point, there are some useful idea from Mr. Gocho:
 
-```
-Let’s write code like the following example.
-
-float *C= (float *)malloc( sizeof( float ) * M*N);// traditional C & C++ style.
-std::vector<float> B( K*N ), A(M*K);// C++ stdlib style.
-#pragma omp parallel for
-for (int m=0; m<M; m++) {
-  memset( C+m*N, 0, sizeof( float )* N );
-  for (int k =0; k < K; k++) {
-     float kA = A[m*K+k];
-     for (int n =0; n<N; n++)
-         C[m*N+n] += kA * B[k*N+n];
-    }
-}
-```
-
-```
-Nested pointer arrays can cause some overheads or performance disadvantages.
-( It’s not an unsafe problem. )
-Single pointer arrays are always guaranteed to be cache-efficient linear memory (continuous memory region), and the high performance BLAS API( https://github.com/xianyi/OpenBLAS) can also be called.
-In either case, it can be occurred some illegal memory accesses, such as the overflow, incorrect indexing, and race conditions.
-Therefore, please be careful when implementing single- or multi-threaded programs.
-```
-
-```
-Race condition exampleも紹介しておきます
-
-・Invalid code
-float A=0;
-#pragma omp parallel for
-for (int i=0; i <N; i++) A += data[i];
-
-・valid code
-float A=0;
-#pragma omp parallel for reduction( +: A )
-for (int i=0; i <N; i++) A += data[i];
-
-or
-
-std::vector<float> buf( num_thr, 0.0f );
-#pragma omp parallel for num_threads( num_thr )
-for (int i=0; i <N; i++) {
-  int tid = omp_get_thread_num();
-  buf[tid] += data[i];
-}  // all threads join after finished the loop
-// single threads sumup reduced values
-float A=0.0f;
-for (int t=0; t < num_thr; t++) A += buf[t];
-```
+//
 
 But as the pdf file said, I found my non-nested program is slower than the nested one, I will try to find out the reason.
 
